MBS-8684: Fix layout problem in Moodle 4.3 (#89)

--- a/styles.css
+++ b/styles.css
@@ -101,3 +101,7 @@
 .learningmap-disabled-activity {
     color: lightsalmon;
 }
+
+.learningmap-render-container {
+    width: 100%;
+}
